# UAV_UGV_path

./: README.md
jackal/: circle.py  figure8.py  rect.py
offboard_cpp/: CMakeLists.txt  chat_2024_02_10_18_27_53.md  package.xml
offboard_cpp/include/: apd.h
offboard_cpp/launch/: velocity.launch  waypoint.launch  yaw.launch
offboard_cpp/src/: main.cpp  offb_tk_ld.cpp  takeoff_land.cpp  trajectory_gen.cpp  velocity.cpp  velocity_control.cpp  waypoint.cpp  waypoint_copy.cpp  yaw.cpp
offboard_cpp/yaml/: line2.yaml  range.yaml  rect.yaml  triangle.yaml  updown.yaml  waypoint_points.yaml
uav/: circle.py  figure8.py  px4.py  rect.py
url_uavugv/: CMakeLists.txt  README.md  package.xml
url_uavugv/include/: fail_safe.h  ugv.h
url_uavugv/launch/uav/: uav_circle.launch  uav_figure8.launch  uav_rect.launch  waypoint.launch
url_uavugv/launch/ugv/: ugv_circle.launch  ugv_copy.launch  ugv_figure8.launch  ugv_rect.launch
url_uavugv/rviz/: check.rviz
url_uavugv/scripts/: circle_uav.py  circle_ugv.py  figure8_uav.py  figure8_ugv.py  rect_uav.py  rect_ugv.py  waypoint_following.py
url_uavugv/src/: circle_ugv.cpp  fail_safe_sub.cpp  figure8_ugv.cpp  rect_ugv.cpp  rect_ugv_copy.cpp  ugv.cpp  visualization.cpp
url_uavugv/yaml/: waypoint.yaml
