<package format="2">
  <name>url_uavugv</name>
  <version>0.0.0</version>
  <description>The junhyeokchoe uavugv package</description>

  <maintainer email="cjhhalla@github.com"> </maintainer>

  <license>URL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

</package>

